--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="account_list_action_button_size">70dp</dimen>
     <dimen name="account_list_item_padding">10dp</dimen>
     <dimen name="account_list_item_view_padding">2dp</dimen>
+    <dimen name="activity_list_categories_label_textSize">40sp</dimen>
 </resources>
