--- a/app/src/main/res/layout/activity_list_operations.xml
+++ b/app/src/main/res/layout/activity_list_operations.xml
@@ -7,30 +7,24 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".CategoryListActivity">
+    tools:context=".OperationListActivity">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/activity_list_categories_title"
-        android:text="@string/activity_list_categories_label_default_text"
-        android:textSize="@dimen/activity_list_categories_label_textSize"
-        />
+    <include layout="@layout/search_activity_widget" android:id="@+id/activity_list_operations_search_activity_widget"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/activity_list_categories_buttons_view">
+        android:id="@+id/activity_list_operations_buttons_view"
+        android:layout_below="@id/activity_list_operations_search_activity_widget">
 
         <ImageButton
 
             android:layout_width="@dimen/list_activity_action_button_size"
             android:layout_height="@dimen/list_activity_action_button_size"
-            android:id="@+id/activity_list_categories_add_button"
+            android:id="@+id/activity_list_operations_add_button"
 
             android:background="@android:drawable/ic_input_add"
-            android:contentDescription="@string/activity_list_categories_add_button_description"
+            android:contentDescription="@string/activity_list_operations_add_button_description"
 
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true" />
@@ -39,21 +33,21 @@
 
             android:layout_width="@dimen/list_activity_action_button_size"
             android:layout_height="@dimen/list_activity_action_button_size"
-            android:id="@+id/activity_list_categories_refresh_button"
+            android:id="@+id/activity_list_operations_refresh_button"
 
             android:background="@android:drawable/ic_popup_sync"
-            android:contentDescription="@string/activity_list_categories_refresh_button_description"
+            android:contentDescription="@string/activity_list_operations_refresh_button_description"
 
             android:layout_alignParentTop="true"
-            android:layout_toStartOf="@id/activity_list_categories_add_button" />
+            android:layout_toStartOf="@id/activity_list_operations_add_button" />
 
     </RelativeLayout>
 
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/activity_list_categories_list_view"
-        android:layout_below="@id/activity_list_categories_buttons_view">
+        android:id="@+id/activity_list_operations_list_view"
+        android:layout_below="@id/activity_list_operations_buttons_view">
 
     </ListView>
 
